<resources>
    <string name="app_name">My Spelling Buddy</string>
    <string name="my_spelling_buddy">My SpellBuddy</string>
    <string name="start">Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause_audio">Pause audio</string>
    <string name="repeat_audio">Repeat audio</string>
    <string name="settings">Settings</string>
    <string name="writing_method">Writing method</string>
    <string name="playback">Playback</string>
    <string name="scan_your_code_to_start">Scan your code!</string>
    <string name="check_code">Check</string>
    <string name="exam_instructions">Listen carefully and write down what you hear!</string>
    <string name="continue_exam">Continue</string>
    <string name="upload_photo">Upload your photo for checking!</string>
    <string name="upload">Upload</string>
    <string name="check">Check</string>
    <string name="results">Results</string>
    <string name="mistakes">Mistakes</string>
    <string name="home">Home</string>
    <string name="upload_again">Upload again</string>
    <string name="qr_code_unknown">No valid qr code detected! Try again!</string>
    <string name="everything_correct_great_job">Everything correct!\n Great job!</string>
    <string-array name="Languages">
        <item>English</item>
        <item>Croatian</item>
    </string-array>
    <string-array name="WritingMethods">
        <item>Device</item>
        <item>Paper</item>
    </string-array>
    <string name="permission_required">Permission required</string>
    <string name="application_camera_access">This application needs to access the camera to process barcodes</string>
    <string name="ok">Ok</string>
    <string name="audio_ready">Audio ready for playing!</string>
    <string name="audio_fail">Audio download failed!</string>
    <string name="clear_text">Clear text</string>
    <string name="scan">Scan</string>
    <string name="language">Language:</string>
    <string name="your_result">Your result</string>
    <string name="diktat_test">Ovo je diktat proba.</string>
    <string name="submit">Submit</string>
</resources>